Update fd_freefile when kqueue descriptors are not copied from parent to child. From Wolfgang Solfrank in PR kern/41651. Approved by Andrew Doran.